[project]
name = "ReelSmith"
version = "0.1.0"
description = "Fully automated generation of short-form videos"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "kokoro>=0.9.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.6.2",
    "moviepy>=2.2.1",
    "ollama>=0.5.1",
    "soundfile>=0.13.1",
    "typer>=0.16.0",
    "whisperx>=3.4.2",
]

#[project.optional-dependencies]
#local = [
#
#]
#
#google = [
#
#]
